namespace/bank-integration/bank-integrations-manager/1-deployment-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-integrations-manager
  namespace: bank-integration
  labels:
    app.kubernetes.io/name: bank-integrations-manager
    app: bank-integrations-manager
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bank-integrations-manager
        app: bank-integrations-manager
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "9101"
        proxy.istio.io/config: |
          terminationDrainDuration: 300s
          holdApplicationUntilProxyStarts: true
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
      terminationGracePeriodSeconds: 301
      containers:
        - name: bank-integrations-manager
          imagePullPolicy: IfNotPresent
          image: bim-local:v1.0.1
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9101
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9101
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9101
              scheme: HTTP
            failureThreshold: 60
            periodSeconds: 15
            timeoutSeconds: 5
  selector:
