namespace/bank-integration/bank-integrations-manager/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-integrations-manager
  labels:
    app.kubernetes.io/name: bank-integrations-manager
    app: bank-integrations-manager
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 9101
      targetPort: 9101
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: bank-integrations-manager
    app: bank-integrations-manager
